--- a/inner-page.html
+++ b/inner-page.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Inner Page - iPortfolio Bootstrap Template</title>
+  <title>Portofolio Adrian Zaidan Zidna</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -38,7 +38,7 @@
 <body>
 
   <!-- ======= Mobile nav toggle button ======= -->
-  <i class="bi bi-list mobile-nav-toggle d-xl-none"></i>
+  <em class="bi bi-list mobile-nav-toggle d-xl-none"></em>
 
   <!-- ======= Header ======= -->
   <header id="header">
@@ -46,24 +46,24 @@
 
       <div class="profile">
         <img src="assets/img/profile-img.png" alt="" class="img-fluid rounded-circle">
-        <h1 class="text-light"><a href="index.html">Alex Smith</a></h1>
+        <h1 class="text-light"><a href="index.html">Adrian Zaidan Zidna</a></h1>
         <div class="social-links mt-3 text-center">
-          <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-          <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-          <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+          <a href="#" class="twitter"><em class="bx bxl-twitter"></em></a>
+          <a href="#" class="facebook"><em class="bx bxl-facebook"></em></a>
+          <a href="#" class="instagram"><em class="bx bxl-instagram"></em></a>
+          <a href="#" class="google-plus"><em class="bx bxl-skype"></em></a>
+          <a href="#" class="linkedin"><em class="bx bxl-linkedin"></em></a>
         </div>
       </div>
 
       <nav id="navbar" class="nav-menu navbar">
         <ul>
-          <li><a href="#hero" class="nav-link scrollto active"><i class="bx bx-home"></i> <span>Home</span></a></li>
-          <li><a href="#about" class="nav-link scrollto"><i class="bx bx-user"></i> <span>About</span></a></li>
-          <li><a href="#resume" class="nav-link scrollto"><i class="bx bx-file-blank"></i> <span>Resume</span></a></li>
-          <li><a href="#portfolio" class="nav-link scrollto"><i class="bx bx-book-content"></i> <span>Portfolio</span></a></li>
-          <li><a href="#services" class="nav-link scrollto"><i class="bx bx-server"></i> <span>Services</span></a></li>
-          <li><a href="#contact" class="nav-link scrollto"><i class="bx bx-envelope"></i> <span>Contact</span></a></li>
+          <li><a href="#hero" class="nav-link scrollto active"><em class="bx bx-home"></em> <span>Home</span></a></li>
+          <li><a href="#about" class="nav-link scrollto"><em class="bx bx-user"></em> <span>About</span></a></li>
+          <li><a href="#resume" class="nav-link scrollto"><em class="bx bx-file-blank"></em> <span>Resume</span></a></li>
+          <li><a href="#portfolio" class="nav-link scrollto"><em class="bx bx-book-content"></em> <span>Portfolio</span></a></li>
+          <li><a href="#services" class="nav-link scrollto"><em class="bx bx-server"></em> <span>Services</span></a></li>
+          <li><a href="#contact" class="nav-link scrollto"><em class="bx bx-envelope"></em> <span>Contact</span></a></li>
         </ul>
       </nav><!-- .nav-menu -->
     </div>
@@ -112,7 +112,7 @@
     </div>
   </footer><!-- End  Footer -->
 
-  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
+  <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><em class="bi bi-arrow-up-short"></em></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter.js"></script>
