--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
         <h1 class="text-light"><a href="index.html">Adrian Zaidan Zidna</a></h1>
         <div class="social-links mt-3 text-center">
           <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-          <a href="#" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
+          <a href="https://wa.me/6287885913033?text=" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-          <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
+          <a href="#" class="discord"><i class="bx bxl-discord"></i></a>
           <a href="#" class="youtube"><i class="bx bxl-youtube"></i></a>
         </div>
       </div>
