--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
           <a href="https://wa.me/6287885913033?text=" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
           <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
           <a href="#" class="discord"><i class="bx bxl-discord"></i></a>
-          <a href="#" class="youtube"><i class="bx bxl-youtube"></i></a>
+          <a href="https://www.youtube.com/channel/UCTxF7iNwEG2AWhnx9TvdkAw" class="youtube"><i class="bx bxl-youtube"></i></a>
         </div>
       </div>
 
@@ -583,7 +583,7 @@
                 <p>+62 878 8591 3033</p>
               </div>
 
-              <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
+              <iframe src="https://maps.google.com/maps?q=Warung%20citra%20jalan%20Kong%20ali%20Jl.%20Kong%20Ali%20Gg.%20Ikhtiar%20No.1,%20RW.4,%20Kebagusan,%20Kec.%20Ps.%20Minggu,%20Kota%20Jakarta%20Selatan,%20Daerah%20Khusus%20Ibukota%20Jakarta%2012520&t=&z=19&ie=UTF8&iwloc=&output=embed" frameborder="0" style="border:0; width: 100%; height: 290px;" allowfullscreen></iframe>
             </div>
 
           </div>
