--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
   <section id="hero" class="d-flex flex-column justify-content-center align-items-center">
     <div class="hero-container" data-aos="fade-in">
       <h1>Adrian Zaidan Zidna</h1>
-      <p>I'm <span class="typed" data-typed-items="Illustrator, Photo Editor"></span></p>
+      <p>I'm <span class="typed" data-typed-items="Illustrator, Graphic Designer"></span></p>
     </div>
   </section><!-- End Hero -->
 
@@ -91,7 +91,7 @@
             <img src="assets/img/profile-img.jpg" class="img-fluid" alt="">
           </div>
           <div class="col-lg-8 pt-4 pt-lg-0 content" data-aos="fade-left">
-            <h3>Illustrator and Photo Editor</h3>
+            <h3>Illustrator &amp; Graphic Designer</h3>
             <p class="fst-italic">
               His name was displayed the first time this page was displayed, so "you," the person who opened this page, should already know it.
             </p>
@@ -112,7 +112,7 @@
               </div>
             </div>
             <p>
-              Adrian is a young man who currently studies at Vocational High School 41 Jakarta, also known as SMK Negeri 41 Jakarta. He is majoring in multimedia because he is interested in things like laptops and gadgets. Until he seeks interest in graphic design and story writing.
+              Adrian is a young man who currently studies at Vocational High School 41 Jakarta, also known as SMK Negeri 41 Jakarta. He is majoring in multimedia because he is interested in things like laptops and gadgets. Until he seeks interest in graphic design and illustrating.
             </p>
           </div>
         </div>
