--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
             <h3 class="resume-title">Education</h3>
             <div class="resume-item">
               <h4>Student of SMK Negeri 41 Jakarta, Majoring in Multimedia</h4>
-              <h5>2021 - 2024</h5>
+              <h5>2021 - Present</h5>
               <p><i>
                 Jl. Komp. Timah No.1, RT.1/RW.3, Pd. Labu, Kec. Cilandak, Kota Jakarta Selatan, Daerah Khusus Ibukota Jakarta 12450
               </i></p>
