--- a/index.html
+++ b/index.html
@@ -372,7 +372,9 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Magnam dolores commodi suscipit. Necessitatibus eius consequatur ex aliquid fuga eum quidem. Sit sint consectetur velit. Quisquam quos quisquam cupiditate. Et nemo qui impedit suscipit alias ea. Quia fugiat sit in iste officiis commodi quidem hic quas.</p>
+          <p>
+            Here is Adrian's contact information; perhaps you'd like to call or message him.
+          </p>
         </div>
 
         <div class="row" data-aos="fade-in">
