--- a/[]lr-details.html
+++ b/[]lr-details.html
@@ -45,7 +45,7 @@
   <div class="d-flex flex-column">
 
     <div class="profile">
-      <img src="assets/img/profile-img.png" alt="" class="img-fluid rounded-circle">
+      <img src="assets/img/profile-img.jpg" alt="" class="img-fluid rounded-circle">
       <h1 class="text-light"><a href="index.html">Adrian Zaidan Zidna</a></h1>
       <div class="social-links mt-3 text-center">
         <a href="https://wa.me/6287885913033?text=" class="whatsapp"><i class="bx bxl-whatsapp"></i></a>
